--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+html, body {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 40px 60px;
 }
+
+input[type=text],
+button {
+  font-size: 1.3rem;
+  width: 15rem;
+  padding: 0.3rem 0.4rem;
+}
+
+button {
+  width: auto;
+  padding: 0.3rem 1rem;
+  margin-left: 0.6rem;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  align-content: center;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  width: 30%;
+}
+  .card img {
+    max-height: 170px;
+  }
+  .card p {
+    padding: 5px;
+    text-align: center;
+  }
